Bug 269591 - [threaded-animation-resolution] don't accelerate filter interpolation if a `drop-shadow()` operation is not last
Summary: [threaded-animation-resolution] don't accelerate filter interpolation if a `d...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
Depends on:
Blocks: 250970
  Show dependency treegraph
 
Reported: 2024-02-16 10:31 PST by Antoine Quint
Modified: 2024-02-16 14:06 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2024-02-16 10:31:46 PST
If a `filter` value is ever set on an animated target, we can only use accelerated interpolation if it contains a `drop-shadow()` operation as its last operation. The reason we need to implement this constraint is because a `CALayer` specifies drop shadow as a separate group of properties compared to other filters and is applied last.
Comment 1 Antoine Quint 2024-02-16 10:39:34 PST
Pull request: https://github.com/WebKit/WebKit/pull/24632
Comment 2 EWS 2024-02-16 14:05:35 PST
Committed 274877@main (c421dabfa6f1): <https://commits.webkit.org/274877@main>

Reviewed commits have been landed. Closing PR #24632 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2024-02-16 14:06:25 PST
<rdar://problem/123113651>